--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -3,7 +3,7 @@ NAME = span
 CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98 -g
 
-SRCS =	main.cpp
+SRCS =	main.cpp Span.cpp \
 
 OBJS = $(SRCS:.cpp=.o)
 
